# mlir-qbe-translate

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
include/: CMakeLists.txt
include/QBE/: CMakeLists.txt  QBEDialect.h  QBEDialect.td  QBEOps.h  QBEOps.td  QBEPasses.h  QBEPasses.td  QBETypes.h  QBETypes.td
include/QBE/IR/: CMakeLists.txt  QBEDialect.h  QBEDialect.td  QBEOps.h  QBEOps.td  QBETypes.h  QBETypes.td
include/QBE/Transforms/: CMakeLists.txt  QBEPasses.h  QBEPasses.td
lib/QBE/: CMakeLists.txt  QBEDialect.cpp  QBEOps.cpp  QBEPasses.cpp  QBETypes.cpp
lib/QBE/IR/: CMakeLists.txt  QBEDialect.cpp  QBEOps.cpp  QBETypes.cpp
lib/QBE/Transforms/: CMakeLists.txt  ConvertArithToQBE.cpp  ConvertControlFlowToQBE.cpp  ConvertFuncToQBE.cpp
qbe-opt/: CMakeLists.txt  qbe-opt.cpp
qbe-translate/: CMakeLists.txt  qbe-translate.cpp
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/QBE/: qbe-opt.mlir  qbe-translate.mlir
test/QBE/Dialect/: ops.mlir
test/QBE/IR/: arith-ops.mlir  func-ops.mlir  jump-ops.mlir
test/QBE/Passes/: arith-to-qbe.mlir
test/QBE/Transforms/: arith-to-qbe.mlir  cf-to-qbe.mlir  func-to-qbe.mlir
